Añadido catálogo de juegos

--- a/src/main/resources/templates/games/all.html
+++ b/src/main/resources/templates/games/all.html
@@ -6,7 +6,7 @@
 <header th:replace="fragments/header"></header>
 <section class="container">
     <h1 th:text="${title}"></h1>
-    <p th:text="${books}"></p>
+    <p th:text="${games}"></p>
 </section>
 <footer th:replace="fragments/footer"></footer>
 </body>
