Creado estilo tabla mediante clase

--- a/src/main/resources/templates/games/all.html
+++ b/src/main/resources/templates/games/all.html
@@ -6,7 +6,7 @@
 <header th:replace="fragments/header"></header>
 <section class="container">
     <h1 th:text="${title}"></h1>
-    <table>
+    <table class="table">
         <thead>
         <tr>
             <th scope="col">Id</th>
