--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -4,7 +4,9 @@
 </head>
 <body>
 <header th:replace="fragments/header"></header>
-<section class="container"><h2>Welcome to Legacy Games</h2></section>
+<section class="container"><h2>Welcome to Legacy Games</h2>
+    <p>Go to the <a href="/games/">Games</a> section or <a href="/games/new">create a new game</a></p>
+</section>
 <footer th:replace="fragments/footer"></footer>
 </body>
 </html>
