--- a/src/main/resources/templates/games/new.html
+++ b/src/main/resources/templates/games/new.html
@@ -13,8 +13,8 @@
             </div>
             <div class="form-group">
                 <label class="col-md2" for="price">Price</label>
-                <input type="text" class="col-md6 form-control form-control-sm" id="author"
-                       placeholder="Enter author">
+                <input type="text" class="col-md6 form-control form-control-sm" id="price"
+                       placeholder="Enter price">
             </div>
             <div class="form-group">
                 <label class="col-md2" for="category">Category</label>
