--- a/src/main/resources/templates/games/new.html
+++ b/src/main/resources/templates/games/new.html
@@ -5,20 +5,21 @@
 <body>
 <header th:replace="fragments/header"></header>
     <section class="container">
-        <form>
+        <form th:action="@{/games/new}" th:object="${game}" method="post">
             <div class="form-group">
+                <input type="hidden" th:field="*{id}">
                 <label class="col-md2" for="title">Title</label>
-                <input type="text" class="col-md6 form-control form-control-sm" id="title"
+                <input th:field="*{title}" type="text" class="col-md6 form-control form-control-sm" id="title"
                        placeholder="Enter title">
             </div>
             <div class="form-group">
                 <label class="col-md2" for="price">Price</label>
-                <input type="text" class="col-md6 form-control form-control-sm" id="price"
+                <input th:field="*{price}" type="text" class="col-md6 form-control form-control-sm" id="price"
                        placeholder="Enter price">
             </div>
             <div class="form-group">
                 <label class="col-md2" for="category">Category</label>
-                <input type="text" class="col-md6 form-control form-control-sm" id="category"
+                <input th:field="*{category}" type="text" class="col-md6 form-control form-control-sm" id="category"
                        placeholder="Enter category">
             </div>
             <div class="card-footer ">
