--- a/src/main/resources/templates/games/all.html
+++ b/src/main/resources/templates/games/all.html
@@ -14,6 +14,7 @@
             <th scope="col">Price</th>
             <th scope="col">Category</th>
             <th scope="col">Edit</th>
+            <th scope="col">Delete</th>
         </tr>
         </thead>
         <tbody>
@@ -23,6 +24,7 @@
             <td th:text="${game.price}">Mark</td>
             <td th:text="${game.category}">Mark</td>
             <td><a class="btn btn-success btn-sm" th:href="'/games/edit/'+${game.id}">Edit</a>
+            <td><a class="btn btn-success btn-sm btn-danger" th:href="'/games/edit/'+${game.id}">Delete</a>
             </td>
         </tr>
         </tbody>
