--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -1,3 +1,9 @@
+body  {
+    background-image: url("http://www.fondoswiki.com/Uploads/fondoswiki.com/ImagenesGrandes/dragon-fuego-4-5.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
 .game-list {
     padding: 5px;
     display: flex;
@@ -47,3 +53,4 @@
     display: inline-block;
     margin: 0 20px;
 }
+
