--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -1,4 +1,4 @@
-<header>
+<header xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">Legacygames</a>
@@ -9,9 +9,17 @@
             </button>
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Games</a>
+                    <a class="nav-link active" aria-current="page" href="/games">Games</a>
                 </li>
-                <li class="nav-item"><a class="nav-link" href="#">New Game</a></li>
+                <li class="nav-item"><a class="nav-link" href="/games/new">New Game</a></li>
+            </ul>
+            <ul>
+                <li sec:authorize="isAnonymous()">
+                    <a href="/login" >Login</a>
+                </li>
+                <li sec:authorize="isAuthenticated()">
+                    <a href="/logout" >Logout</a>
+                </li>
             </ul>
         </div>
     </nav>
