--- a/src/main/resources/templates/games/all.html
+++ b/src/main/resources/templates/games/all.html
@@ -5,7 +5,7 @@
 <body>
 <header th:replace="fragments/header"></header>
 
-<section class="container">
+<section class="container" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 
 
 
