--- a/src/main/resources/templates/games/edit.html
+++ b/src/main/resources/templates/games/edit.html
@@ -4,44 +4,41 @@
 </head>
 <body>
 <header th:replace="fragments/header"></header>
-    <section class="container">
-            <h1 th:text="${title}"></h1>
-        <form th:actioon="@{/games/new}" th:object="${game}" method="post">
+<section class="container">
+    <h1 th:text="${title}"></h1>
+    <form th:action="@{/games/new}" th:object="${game}" method="post">
 
-            <div class="form-group">
-                <input type="hidden" th:field="*{id}">
-                <label class="col-md2" for="title">Title</label>
-                <input th:field="*{title}" type="text" class="col-md6 form-control form-control-sm" id="title"
-                       placeholder="Enter title">
-            </div>
+        <div class="form-group">
+            <input type="hidden" th:field="*{id}">
+            <label class="col-md2" for="title">Title</label>
+            <input th:field="*{title}" type="text" class="col-md6 form-control form-control-sm" id="title"
+                   placeholder="Enter title">
+        </div>
 
-            <div class="form-group">
-                <label class="col-md2" for="price">Price</label>
-                <input th:field="*{price}" type="text" class="col-md6 form-control form-control-sm" id="price"
-                       placeholder="Enter price">
-            </div>
+        <div class="form-group">
+            <label class="col-md2" for="price">Price</label>
+            <input th:field="*{price}" type="text" class="col-md6 form-control form-control-sm" id="price"
+                   placeholder="Enter price">
+        </div>
 
-            <div class="form-group">
-                <label class="col-md2" for="category">Category</label>
-                <select th:field="*{category}" type="text" class="col-md6 form-control form-control-sm" id="category">
-                    <option th:each="category: ${categories}"
-                            th:value="${category.name}"
-                            th:text="${category.name}">
+        <div class="form-group">
+            <label class="col-md2" for="category">Category</label>
+            <input th:field="*{category}" type="text" class="col-md6 form-control form-control-sm" id="category"
+                   placeholder="Enter category">
 
-                    </option>
-                </select>
+        </div>
 
-            <div class="form-group">
-                <label class="col-md2" for="coverImage">CoverImage</label>
-                <input th:field="*{coverImage}" type="url" class="col-md6 form-control form-control-sm" id="coverImage"
-                       placeholder="Add an image url">
-            </div>
+        <div class="form-group">
+            <label class="col-md2" for="coverImage">CoverImage</label>
+            <input th:field="*{coverImage}" type="url" class="col-md6 form-control form-control-sm" id="coverImage"
+                   placeholder="Add an image url">
+        </div>
 
-            <div class="card-footer ">
-                <input type="submit" class="btn btn-primary btn-sm" value="Save"/>
-            </div>
-        </form>
-    </section>
+        <div class="card-footer ">
+            <input type="submit" class="btn btn-primary btn-sm" value="Save"/>
+        </div>
+    </form>
+</section>
 <footer th:replace="fragments/footer"></footer>
 </body>
 </html>
